--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,14 +18,14 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Top Score</a>
+                    <a class="navbar-brand" href="{{ path('app_top_scores', { id : 0 }) }}">Top Score</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Top Scores</a>
+                                <a class="nav-link" href="{{ path('app_top_scores', { id : 0 }) }}">Top Scores</a>
                             </li>
                             {% if app.user %}
                                 <li class="nav-item">
