--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,34 @@
 body {
-    background-color: skyblue;
+    background-color: white;
+}
+
+/* Style de base pour les noms */
+.podium-name {
+    position: absolute;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #000;
+    text-align: center;
+    width: 100px;
+}
+
+/* Premier au centre et plus haut */
+.first-place {
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* Deuxième à droite et un peu plus bas */
+.second-place {
+    top: 30%;
+    left: 70%;
+    transform: translateX(-50%);
+}
+
+/* Troisième à gauche et au même niveau que le second */
+.third-place {
+    top: 30%;
+    left: 30%;
+    transform: translateX(-50%);
 }
